--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,7 @@
             background-attachment: fixed;
         }
 
-        h2 {
+        h1 {
             background-color: white;
             border: 2px solid black;
             border-radius: 5px;
@@ -25,8 +25,24 @@
             padding: 5px;
         }
 
-        h4 {
+        h3 {
             position: center;
+        }
+
+        .header {
+            display: flex;
+            position: absolute;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            margin-top: 20px;
+        }
+
+        .welcome {
+            text-align: center;
+        }
+
+        .chatbot {
+            height: 100px;
         }
 
         #chatbox {
@@ -114,23 +130,25 @@
     </style>
 </head>
 
-<body background="{{ url_for('static', filename='images/slider.jpg') }}">
-    <img src="{{ url_for('static', filename='images/logo.png') }}">
-    <center>
-        <h2>
-            Welcome to HH Restaurant
-        </h2>
-        <h4>
-            You are chatting with our customer support bot!
-        </h4>
-    </center>
+<body>
+    <div class="header">
+        <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/845811/images/5389323/chatbot.png" class="chatbot">
+        <div class="welcome">
+            <h1>
+                Welcome to HH Restaurant!
+            </h1>
+            <h3>
+                You are chatting with our customer support bot!
+            </h3>
+        </div>
+    </div>
     <div class="boxed">
         <div>
             <div id="chatbox">
             </div>
         </div>
         <div id="userInput">
-            <input id="nameInput" type="text" name="msg" placeholder="Ask me anything..." />
+            <input id="nameInput" type="text" name="msg" placeholder="Booking now..." />
         </div>
         <script>
             function getBotResponse() {
@@ -142,7 +160,8 @@
                     .getElementById("userInput")
                     .scrollIntoView({ block: "start", behavior: "smooth" });
                 $.get("/get", { msg: rawText }).done(function (data) {
-                    var botHtml = '<p class="botText"><span><b>' + "Restrobot : " + '</b>' + data + "</span></p>";
+                    var botHtml = '<p class="botText"><span><b>'
+                        + "Restrobot : " + '</b>' + data + "</span></p>";
                     $("#chatbox").append(botHtml);
                     document
                         .getElementById("userInput")
